<resources>
    <string name="app_name">CoSign</string>
    <string name="str_loading">Đang xử lý...</string>
    <string name="api_default_error">Có lỗi xảy ra!</string>
    <string name="str_authe">Tài khoản không hợp lệ/Nhập sai mật khẩu</string>
    <string name="text_all_has_error_please_try">Có lỗi xảy ra, vui lòng thử lại!</string>
    <string name="text_all_has_error_timeout">Kết nối thất bại!</string>
    <string name="text_all_has_error_network">Lỗi kết nối mạng!</string>
    <string name="str_confirm_logout">Bạn có muốn đăng xuất không?</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Hủy</string>
    <string name="str_back_press">Nhấn lần nữa để thoát!</string>
    <string name="str_phone_number">Số điện thoại</string>

    <string name="str_pass">Mật khẩu</string>
    <string name="str_forgot_pass">Quên mật khẩu?</string>
    <string name="str_login">Đăng nhập</string>
    <string name="str_or">Hoặc</string>
    <string name="str_require_send_otp"><![CDATA[Bạn không nhận được mã xác thực? <font color=\'#3D5CFF\'>Gửi lại</font>]]></string>
    <string name="str_name_show">Tên hiển thị</string>
    <string name="str_register">Đăng ký</string>
    <string name="str_pass_repeat">Nhập lại mật khẩu</string>
    <string name="str_verify_register">Xác thực và tạo tài khoản</string>
    <string name="str_verify_fail">Xác thực thất bại!</string>
    <string name="str_otp_fail">Mã xác thực không chính xác!</string>
    <string name="str_too_many_request">Vượt quá giới hạn! Vui lòng thử lại sau</string>
    <string name="str_register_next"><![CDATA[<font color=\'#858597\'>Bạn chưa có tài khoản?</font> <font color=\'#000000\'><b>Đăng ký</b></font>]]></string>
    <string name="str_login_next"><![CDATA[<font color=\'#858597\'>Bạn đã có tài khoản?</font> <font color=\'#000000\'><b>Đăng nhập</b></font>]]></string>

    <string name="str_enter_pass">Nhập mật khẩu</string>
    <string name="str_enter_email">Nhập email</string>
    <string name="str_welcome_again">Chào mừng bạn quay trở lại</string>
    <string name="str_create_account_here">Tạo tài khoản mới ở đây</string>
    <string name="str_enter_phone">Nhập số điện thoại</string>
    <string name="str_enter_pass_again">Nhập lại mật khẩu</string>
    <string name="str_enter_name_show">Nhập tên hiển thị</string>

    <string name="str_video_to_text">Dịch Từ</string>
    <string name="str_text_to_video">Tìm kiếm</string>
    <string name="str_account">Tài khoản</string>
    <string name="str_course">Khoá học</string>
    <string name="str_search">Tìm kiếm</string>

    <string name="str_label">Nhãn: %s</string>
    <string name="str_full_name">Họ tên</string>
    <string name="str_enter_name">Nhập tên</string>
    <string name="str_date_of_birth">Ngày sinh</string>
    <string name="str_choose_date_of_birth">Chọn ngày sinh</string>
    <string name="str_address">Địa chỉ</string>
    <string name="str_enter_address">Nhập địa chỉ</string>
    <string name="str_language">Ngôn ngữ</string>
    <string name="str_vietnamese">Tiếng Việt</string>
    <string name="str_english">Tiếng Anh</string>
    <string name="str_email">Email</string>
    <string name="str_account_information">Thông tin tài khoản</string>
    <string name="str_profile_number">Số hồ sơ</string>
    <string name="str_enter_profile_number">Nhập số hồ sơ</string>
    <string name="str_support_by">Hỗ trợ bởi</string>
    <string name="str_register_by">Đăng ký bởi</string>
    <string name="str_save_changes">Lưu thay đổi</string>
    <string name="str_pick">Chọn</string>
    <string name="str_check">Kiểm tra video</string>
    <string name="str_level">Cấp độ %s</string>
    <string name="str_you_did_not_choose_video">Bạn chưa chọn video!</string>
    <string name="str_profile">Hồ sơ</string>
    <string name="str_view_points">Xem điểm</string>
    <string name="str_back">Trở lại</string>
    <string name="str_average">Trung bình</string>
    <string name="str_translate_desc">PTIT_IEC_COSIGN \n Dự án hợp tác giữa Học viện Công nghệ Bưu chính Viễn thông và Samsung Việt Nam.</string>
    <string name="str_use_camera">Sử dụng camera của tôi</string>
    <string name="str_go_to_folder">Chọn tệp từ thư viện</string>
    <string name="str_again">Dịch từ khác</string>
    <string name="str_novid">Không tìm thấy video. Hãy thử quay video!</string>
    <string name="translate">Dịch</string>
    <string name="str_slidetitle_1">Giữ khoảng cách</string>
    <string name="str_slidedesc_1">Để có độ chính xác tốt nhất, nên để toàn bộ cơ thể bạn trong khung hình camera.</string>
    <string name="str_slidetitle_2">Sử dụng chỉ báo</string>
    <string name="str_slidedesc_2">Dẫn đầu của bạn vào chỉ báo để đo khoảng cách thích hợp.</string>
    <string name="str_slidetitle_3">Bắt đầu quay!</string>
    <string name="str_slidedesc_3">Khi bạn ở đúng vị trí, nhấn nút ghi và quay video.</string>
    <string name="str_meaning">Ý nghĩa</string>
    <string name="str_progress">Tiến độ</string>
    <string name="sample_video">Video minh họa</string>
    <string name="video_not_available">Video không khả dụng</string>
    <string name="practice_your_sign_language">Luyện tập ngôn ngữ kí hiệu!</string>
    <string name="points">điểm</string>
    <string name="welcome_piece">CoSign là ứng dụng để học Ngôn ngữ ký hiệu Việt Nam!</string>
    <string name="let_s_start">Bắt đầu</string>
    <string name="apps_setting">Cài đặt ứng dụng</string>
    <string name="language">Ngôn ngữ</string>
    <string name="recent_courses">Khóa học gần đây</string>
    <string name="searching">Tìm kiếm</string>
    <string name="scores">Điểm</string>
    <string name="see_more">Xem thêm</string>
    <string name="saved_words">Từ đã lưu</string>
    <string name="streaks">Chuỗi ngày</string>
    <string name="signs">Dấu hiệu</string>
    <string name="theme">Chủ đề</string>
    <string name="account_settings">Cài đặt tài khoản</string>
    <string name="edit_account_information">Chỉnh sửa thông tin tài khoản</string>
    <string name="see_account_details">Xem chi tiết tài khoản</string>
    <string name="delete_account">Xóa tài khoản</string>
    <string name="privacy_amp_security"><![CDATA[Quyền riêng tư & Bảo mật]]></string>
    <string name="see_privacy_policy">Xem chính sách quyền riêng tư</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="light">Sáng</string>
    <string name="b_ng_vi_c_ng_k_b_n_ng_v_i_i_u_kho_n_v_ch_nh_s_ch">Bằng việc đăng ký, bạn đồng ý với điều khoản và chính sách</string>
</resources>

