<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/cvInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/color_secondary"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="319dp"
                        android:layout_height="42dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/bg_edt_v2"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/str_enter_name"
                        android:padding="@dimen/dp12"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_color"
                        android:textSize="@dimen/sp13"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.615"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/str_full_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp14"
                        app:layout_constraintStart_toStartOf="@+id/edt_name"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/str_date_of_birth"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp14"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/edt_birthday"
                        app:layout_constraintTop_toBottomOf="@id/edt_name" />

                    <TextView
                        android:id="@+id/edt_birthday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp6"
                        android:background="@drawable/bg_edt_v2"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/str_choose_date_of_birth"
                        android:padding="@dimen/dp12"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_color"
                        android:textSize="@dimen/sp13"
                        app:drawableEndCompat="@drawable/ic_pick_date"
                        app:flow_verticalAlign="center"
                        app:layout_constraintEnd_toEndOf="@+id/edt_name"
                        app:layout_constraintStart_toStartOf="@+id/edt_name"
                        app:layout_constraintTop_toBottomOf="@id/tv_birthday" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/str_address"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp14"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/edt_address"
                        app:layout_constraintTop_toBottomOf="@id/edt_birthday" />

                    <EditText
                        android:id="@+id/edt_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/bg_edt_v2"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/str_enter_address"
                        android:padding="@dimen/dp12"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_color"
                        android:textSize="@dimen/sp13"
                        app:layout_constraintEnd_toEndOf="@+id/edt_birthday"
                        app:layout_constraintHorizontal_bias="0.615"
                        app:layout_constraintStart_toStartOf="@+id/edt_birthday"
                        app:layout_constraintTop_toBottomOf="@id/tv_address" />


                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/bg_edt_v2"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/str_enter_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/dp12"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_color"
                        android:textSize="@dimen/sp13"
                        app:layout_constraintEnd_toEndOf="@+id/edt_address"
                        app:layout_constraintStart_toStartOf="@+id/edt_address"
                        app:layout_constraintTop_toBottomOf="@id/tv_email" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/str_email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp14"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/edt_email"
                        app:layout_constraintTop_toBottomOf="@id/edt_address" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/str_phone_number"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp14"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/edt_phone"
                        app:layout_constraintTop_toBottomOf="@id/edt_email" />

                    <EditText
                        android:id="@+id/edt_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_edt_v2"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/str_enter_phone"
                        android:inputType="phone"
                        android:padding="@dimen/dp12"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_color"
                        android:textSize="@dimen/sp13"
                        app:layout_constraintEnd_toEndOf="@+id/edt_email"
                        app:layout_constraintStart_toStartOf="@+id/edt_email"
                        app:layout_constraintTop_toBottomOf="@id/tv_phone" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp12"
                        android:background="@drawable/bg_btn"
                        android:backgroundTint="@color/color_primary"
                        android:fontFamily="@font/montserrat_bold"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:paddingHorizontal="@dimen/dp12"
                        android:paddingVertical="@dimen/dp8"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/str_save_changes"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp14"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edt_phone" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>