<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp12"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_act_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/dp16"
                android:paddingTop="@dimen/dp16"
                android:paddingBottom="@dimen/dp48">

                <TextView
                    android:id="@+id/tv_label_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp32"
                    android:text="@string/str_login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp22"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_label_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp24"
                    android:text="@string/str_welcome_again"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_login" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp48"
                    android:background="@drawable/bg_edt"
                    android:ellipsize="end"
                    android:hint="@string/str_enter_email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLength="256"
                    android:maxLines="1"
                    android:padding="@dimen/dp12"
                    android:paddingStart="@dimen/dp56"
                    android:paddingEnd="@dimen/dp12"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textSize="@dimen/sp14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_welcome" />

                <View
                    android:id="@+id/v_ver_email"
                    android:layout_width="@dimen/dp1"
                    android:layout_height="0dp"
                    android:layout_marginVertical="@dimen/dp4"
                    android:layout_marginStart="@dimen/dp34"
                    android:background="@color/color_gray"
                    app:layout_constraintBottom_toBottomOf="@id/edt_email"
                    app:layout_constraintStart_toStartOf="@id/edt_email"
                    app:layout_constraintTop_toTopOf="@id/edt_email" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email"
                    app:layout_constraintBottom_toBottomOf="@id/edt_email"
                    app:layout_constraintEnd_toEndOf="@id/v_ver_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/edt_email" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp16"
                    android:background="@drawable/bg_edt"
                    android:ellipsize="end"
                    android:hint="@string/str_enter_pass"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:padding="@dimen/dp12"
                    android:paddingStart="@dimen/dp56"
                    android:paddingEnd="@dimen/dp44"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textSize="@dimen/sp14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_email" />

                <View
                    android:id="@+id/v_ver_pass"
                    android:layout_width="@dimen/dp1"
                    android:layout_height="0dp"
                    android:layout_marginVertical="@dimen/dp4"
                    android:layout_marginStart="@dimen/dp34"
                    android:background="@color/color_gray"
                    app:layout_constraintBottom_toBottomOf="@id/edt_password"
                    app:layout_constraintStart_toStartOf="@id/edt_password"
                    app:layout_constraintTop_toTopOf="@id/edt_password" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lock"
                    app:layout_constraintBottom_toBottomOf="@id/edt_password"
                    app:layout_constraintEnd_toEndOf="@id/v_ver_pass"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/edt_password" />

                <ImageView
                    android:id="@+id/imv_show_hide_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp12"
                    android:src="@drawable/ic_eye_open"
                    app:layout_constraintBottom_toBottomOf="@id/edt_password"
                    app:layout_constraintRight_toRightOf="@id/edt_password"
                    app:layout_constraintTop_toTopOf="@id/edt_password" />

                <TextView
                    android:id="@+id/tv_forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp14"
                    android:padding="@dimen/dp12"
                    android:text="@string/str_forgot_pass"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_password" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp128"
                    android:background="@color/color_primary"
                    android:padding="@dimen/dp12"
                    android:src="@drawable/ic_next"
                    android:tintMode="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_forgot_pass" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp128"
                    android:text="@string/str_register_next"
                    android:textColor="@color/text_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_next" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>